src/test/ui/single-use-lifetime/zero-uses-in-impl.stderr
error: lifetime parameter `'a` never used
  --> $DIR/zero-uses-in-impl.rs:19:6
   |
LL | impl<'a> Foo { } //~ ERROR `'a` never used
   |      ^^
   |
note: lint level defined here
  --> $DIR/zero-uses-in-impl.rs:13:9
   |
LL | #![deny(unused_lifetimes)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

